--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,6 +1,7 @@
 .container{
     display: flex;
-    width: 1200px;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
+    background-color: azure;
 }
+
