--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,5 +1,12 @@
 .item {
   display: flex;
+      background: #fff;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 0px 0px 4px 4px;
+    margin-bottom: inherit;
+        height: 60px;
+    width: 300px;
+        align-items: center;
 }
 
 .status {
@@ -8,6 +15,7 @@
   height: 15px;
   border-radius: 50%;
   margin-right: 10px;
+  margin-left: 10px;
 }
 
 .active {
@@ -18,4 +26,13 @@
 .disabled {
   composes: status;
   background-color: red;
+}
+
+.avatar{
+    height: 50px;
+}
+
+.name{
+  padding-left: 10px;
+    font-size: larger;
 }
