--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -33,8 +33,8 @@
   height: 100px;
   align-items: center;
   margin-top: 80px;
-  border-radius: 10px;
-   justify-content: center;
+  border-radius: 0px 0px 10px 10px;
+  justify-content: center;
   padding: 0px;
 }
 
