--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,5 +1,29 @@
+
+tr:nth-child(even) {background: #CCC}
+
+
 .transactionHistory{
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%);
     border-radius: 4px 4px 0px 0px;
-    background-color: cadetblue;
+    width: 300px;
+   
+}
+
+.historyThead{
+background-color: rgb(6, 83, 150);
+color: white;
+height: 50px;
+text-transform: uppercase;
+}
+
+.historyTbody{
+    background-color:  #FFF;
+   height: 50px;
+   color: rgb(152, 150, 150);
+   text-transform: capitalize;
+   
+}
+
+.historyTbody> tr{
+    height: 50px;
 }
